--- a/quick_guide_get_rtings.ipynb
+++ b/quick_guide_get_rtings.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -U numpy pandas openpyxl tqdm\n",
+    "!pip install -U pandas openpyxl tqdm\n",
     "!pip install -U requests selenium beautifulsoup4 \n",
     "!pip install -U wordcloud nltk \n",
     "!pip install -U openai \n",
@@ -35,23 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3faa8bf4-40af-427b-a8df-051dfb66dc71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.kill(os.getpid(), 9) # 런타임 재시작"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "id": "4bee41ea-4783-46e8-91bc-eaf5d4804317",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from market_research.tools import Installer\n",
+    "from market_research.tools.installer import Installer\n",
     "Installer.install_chrome_and_driver()"
    ]
   },
