--- a/quick_guide_textanalysis.ipynb
+++ b/quick_guide_textanalysis.ipynb
@@ -24,23 +24,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -U numpy pandas openpyxl tqdm\n",
+    "!pip install -U pandas openpyxl tqdm\n",
     "!pip install -U requests selenium beautifulsoup4 \n",
     "!pip install -U wordcloud nltk \n",
     "!pip install -U openai \n",
     "!pip install -U matplotlib seaborn\n",
     "!pip install -U getmodelspec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ddc20c5a-330c-4c76-9a65-d10fd83ece75",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.kill(os.getpid(), 9) # 런타임 재시작"
    ]
   },
   {
