--- a/quick_guide_get_models.ipynb
+++ b/quick_guide_get_models.ipynb
@@ -25,23 +25,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -U numpy pandas openpyxl tqdm\n",
+    "!pip install -U pandas openpyxl tqdm\n",
     "!pip install -U requests selenium beautifulsoup4 \n",
     "!pip install -U wordcloud nltk \n",
     "!pip install -U openai \n",
     "!pip install -U matplotlib seaborn\n",
     "!pip install -U getmodelspec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d7dbe47-6128-4dcc-bbbd-b14767e44103",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.kill(os.getpid(), 9) # 런타임 재시작"
    ]
   },
   {
