--- a/quick_guide_get_rtings.ipynb
+++ b/quick_guide_get_rtings.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8e611f88",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
     "from datetime import date\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
-    "from google.colab import files\n",
+    "# from google.colab import files\n",
     "from market_research import Rtings\n",
     "from market_research.tools import FileManager"
    ]
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "intput_folder = Path(\"input_data\")  # 폴더 이름을 지정\n",
+    "intput_folder = Path(\"input_urls\")  # 폴더 이름을 지정\n",
     "\n",
     "# 폴더가 존재하지 않으면 폴더 생성\n",
     "if not intput_folder.exists():\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4ac45040",
    "metadata": {},
    "outputs": [],
@@ -129,16 +129,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ae276e80-1eb4-4561-9609-35b6ac3c9a5d",
+   "execution_count": 5,
+   "id": "98c006be-6c8a-4808-a4ec-59ecbe9f1d56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 불러온 데이터 경로\n",
-    "file_name=\"rtings_url.xlsx\"\n",
-    "file_path = intput_folder / file_name\n",
-    "df = pd.read_excel(file_path)\n",
-    "urls = df[\"urls\"]"
+    "# 분석할 엑셀 파일이 있는 폴더 경로\n",
+    "file_list = intput_folder.glob('*')\n",
+    "excel_files = [file for file in file_list if file.suffix in {'.xlsx', '.xls'}]\n",
+    "urls=[]\n",
+    "for excel_file in excel_files:\n",
+    "    df = pd.read_excel(excel_file)\n",
+    "    urls.extend(df[\"urls\"])"
    ]
   },
   {
