--- a/quick_guide_get_rtings.ipynb
+++ b/quick_guide_get_rtings.ipynb
@@ -62,7 +62,7 @@
     "from datetime import date\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
-    "# from google.colab import files\n",
+    "from google.colab import files\n",
     "from market_research import Rtings\n",
     "from market_research.tools import FileManager"
    ]
@@ -124,7 +124,7 @@
    "id": "997d0838-45c0-4956-a753-e16ec31ea176",
    "metadata": {},
    "source": [
-    "- 파일 명은 `rtings_url.xlsx`으로 하고, column 명은 `urls`으로 하여 `input_data`폴더에 넣어주세요"
+    "- 엑셀 파일의 column 명은 `urls`으로 하여 `input_urls`폴더에 넣어주세요"
    ]
   },
   {
