--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -93,10 +93,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0429c013",
+   "id": "8e37db89-b7bf-4c61-8e74-6d5aa412001a",
    "metadata": {},
    "source": [
     "## 실행"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03af03c9-3a93-4c18-a45c-889fd86e98cc",
+   "metadata": {},
+   "source": [
+    "### sonyspec"
    ]
   },
   {
@@ -113,6 +121,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "012fbc6e-9a24-4c73-bb4f-edd383d7fda9",
+   "metadata": {},
+   "source": [
+    "### panasonicspec"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1eccd54b-edf0-41ef-97d3-92b4bd79465f",
@@ -123,6 +139,14 @@
     "dict_models = panasonicspec.get_models_info()\n",
     "file_name_p = f\"pana_jp_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
     "FileManager.dict_to_excel(dict_models, file_name=file_name_p, sheet_name=\"global\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "555ebe6a-20e9-4961-88c8-48947dc5c1ad",
+   "metadata": {},
+   "source": [
+    "### sonyspec_jp"
    ]
   },
   {
