--- a/quick_guide_market_comments.ipynb
+++ b/quick_guide_market_comments.ipynb
@@ -5,7 +5,7 @@
    "id": "1f063cfb",
    "metadata": {},
    "source": [
-    "# QuickGuide for marketmodels\n",
+    "# QuickGuide for markets comments\n",
     "\n",
     "[프로젝트 페이지: Research-on-the-TV-market](https://github.com/xikest/research-market-tv)"
    ]
@@ -59,11 +59,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from market_research import SONYSPEC, SONYSPEC_JP, PANASONICSPEC\n",
     "from market_research.tools import FileManager\n",
     "from datetime import date\n",
     "from google.colab import files\n",
     "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afd32e6c-9f06-4180-8e75-0cc53c368ef2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "from market_research.tools import WebDriver\n",
+    "\n",
+    "\n",
+    "class Amazon():\n",
+    "    def __init__(self, webdriver_path: str, browser_path: str=None, enable_headless=True):\n",
+    "        self.web_driver = WebDriver(executable_path=webdriver_path, browser_path=browser_path, headless=enable_headless)\n",
+    "        self.wait_time = 1\n",
+    "\n",
+    "\n",
+    "    def get_allcomments(self,url:str=\"https://www.amazon.com/Sony-QD-OLED-7-1-4ch-Theater-Speaker/product-reviews/B0CBDJKR1V/ref=cm_cr_dp_d_show_all_btm?ie=UTF8&reviewerType=all_reviews\",\n",
+    "                        maker=None, product=None) -> list:\n",
+    "\n",
+    "        allcomments_list = []\n",
+    "        page = 0\n",
+    "        last_comment=None\n",
+    "        while True:\n",
+    "            page +=1\n",
+    "            driver = self.web_driver.get_chrome()\n",
+    "            page_url =  f\"{url}&pageNumber={page}\".lower()\n",
+    "            print(f\"connecting to {page_url}\")\n",
+    "            driver.get(page_url)\n",
+    "            time.sleep(self.wait_time)\n",
+    "            page_source = driver.page_source\n",
+    "            soup = BeautifulSoup(page_source, 'html.parser')\n",
+    "            allcomments_list.extend(self._get_comments(soup=soup, url=url, maker=maker, product=product))\n",
+    "            driver.quit()\n",
+    "            print(f\"ppp: {allcomments_list[-1]['Comments']}\")\n",
+    "            try:\n",
+    "                if last_comment is not None:\n",
+    "                    print(f\"last_comment1: {last_comment}\")\n",
+    "                    print(f\"last_comment2: {allcomments_list[-1]['Comments']}\")\n",
+    "                    print(last_comment == allcomments_list[-1]['Comments'])\n",
+    "                    if last_comment == allcomments_list[-1]['Comments']:\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        last_comment = allcomments_list[-1]['Comments']\n",
+    "            except Exception as e:\n",
+    "                print(\"error\")\n",
+    "                print(e)\n",
+    "                break  # 만약 다음 페이지가 없으면 반복문을 종료합니다.\n",
+    "\n",
+    "        df=pd.DataFrame(allcomments_list)\n",
+    "        df = df.reset_index()\n",
+    "        # print(df.head())\n",
+    "        # print(df.tail())\n",
+    "        df.to_csv('test.csv', index=False)\n",
+    "        return allcomments_list\n",
+    "\n",
+    "\n",
+    "    def _get_comments(self, soup, url=None, maker=None, product=None) -> list:\n",
+    "        quote_contents = soup.find_all('div', class_='a-row a-spacing-small review-data')\n",
+    "        comments_list = []\n",
+    "        for quote_content in quote_contents:\n",
+    "            comments = quote_content.span.get_text(strip=True)\n",
+    "            comments_list.append({\"url\":url, 'Maker': maker, 'Product': product, 'Comments': comments})\n",
+    "            # print(\"comments:\", comments)\n",
+    "        return comments_list\n"
    ]
   },
   {
@@ -86,7 +155,7 @@
    "outputs": [],
    "source": [
     "# 폴더가 존재하지 않으면 폴더 생성\n",
-    "output_folder = Path('results_spec')  \n",
+    "output_folder = Path('results_comments')  \n",
     "if not output_folder.exists():\n",
     "  output_folder.mkdir(parents=True, exist_ok=True)"
    ]
@@ -104,7 +173,7 @@
    "id": "03af03c9-3a93-4c18-a45c-889fd86e98cc",
    "metadata": {},
    "source": [
-    "### sonyspec"
+    "### amazon"
    ]
   },
   {
@@ -114,52 +183,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sonyspec = SONYSPEC(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
-    "dict_models = sonyspec.get_models_info()\n",
-    "file_name_s = f\"sony_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
-    "FileManager.dict_to_excel(dict_models, file_name=file_name_s, sheet_name=\"global\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "012fbc6e-9a24-4c73-bb4f-edd383d7fda9",
-   "metadata": {},
-   "source": [
-    "### panasonicspec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1eccd54b-edf0-41ef-97d3-92b4bd79465f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "panasonicspec = PANASONICSPEC(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
-    "dict_models = panasonicspec.get_models_info()\n",
-    "file_name_p = f\"pana_jp_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
-    "FileManager.dict_to_excel(dict_models, file_name=file_name_p, sheet_name=\"global\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "555ebe6a-20e9-4961-88c8-48947dc5c1ad",
-   "metadata": {},
-   "source": [
-    "### sonyspec_jp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc92afec-369b-4235-b528-edc99dbf9750",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sonyspec_jp = SONYSPEC_JP(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
-    "dict_models = sonyspec_jp.get_models_info()\n",
-    "file_name_sjp = f\"sony_model_info_web_jp_{date.today().strftime('%Y-%m-%d')}\"\n",
-    "FileManager.dict_to_excel(dict_models, file_name=file_name_sjp, sheet_name=\"jp\")"
+    "amazon = Amazon(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
+    "comments_dict = amazon.get_allcomments()"
    ]
   },
   {
