--- a/quick_guide_market_rtings.ipynb
+++ b/quick_guide_market_rtings.ipynb
@@ -5,7 +5,7 @@
    "id": "1f063cfb",
    "metadata": {},
    "source": [
-    "# QuickGuide for rtings\n",
+    "# QuickGuide for Rtings\n",
     "\n",
     "[프로젝트 페이지: Research-on-the-TV-market](https://github.com/xikest/research-market-tv)"
    ]
@@ -63,8 +63,133 @@
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "from google.colab import files\n",
-    "from market_research import Rtings\n",
+    "# from market_research import Rtings\n",
     "from market_research.tools import FileManager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a10024e2-cb40-4ca9-9024-7295be32e8b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "import re\n",
+    "from market_research.tools import WebDriver\n",
+    "class Rtings():\n",
+    "    def __init__(self, webdriver_path: str, browser_path: str=None, enable_headless=True):\n",
+    "        self.web_driver = WebDriver(executable_path=webdriver_path, browser_path=browser_path, headless=enable_headless)\n",
+    "        self.wait_time = 1\n",
+    "\n",
+    "    def get_score(self, url:str=\"https://www.rtings.com/tv/reviews/sony/a95l-oled\", format_df=True) :\n",
+    "        \"\"\"\n",
+    "        return type\n",
+    "        -> dict|pd.DataFrame\n",
+    "        \"\"\"\n",
+    "\n",
+    "        driver = self.web_driver.get_chrome()\n",
+    "        maker = url.split(\"/\")[-2]\n",
+    "        model = url.split(\"/\")[-1]\n",
+    "        url = url.lower()\n",
+    "        print(f\"connecting to {url}\")\n",
+    "        # 웹 페이지 로드\n",
+    "        driver.get(url)\n",
+    "        time.sleep(self.wait_time)\n",
+    "\n",
+    "        # scorecard-row-content 클래스를 가진 요소들을 선택\n",
+    "        elements = driver.find_elements(By.CLASS_NAME, \"scorecard-row-content\")\n",
+    "        maker_dict = {}\n",
+    "        try:\n",
+    "            score_dict = {}\n",
+    "            for element in elements:\n",
+    "                label = element.find_element(By.CLASS_NAME, 'scorecard-row-name').text.strip()\n",
+    "                score = element.find_element(By.CLASS_NAME, 'e-score_box-value ').text.strip()\n",
+    "                score_dict[label] = score\n",
+    "\n",
+    "            # WebDriver 종료\n",
+    "            driver.quit()\n",
+    "\n",
+    "            model_dict = {model:score_dict}\n",
+    "            maker_dict = {maker:model_dict}\n",
+    "\n",
+    "            rows = []\n",
+    "            # 딕셔너리를 순회하며 데이터프레임 행으로 추가\n",
+    "            for maker, models in maker_dict.items():\n",
+    "                for model, scores in models.items():\n",
+    "                    for score_type, score in scores.items():\n",
+    "                        rows.append({'Maker': maker, 'Model': model, 'Score Type': score_type, 'Score': score})\n",
+    "            scores_df = pd.DataFrame(rows)\n",
+    "            scores_dict = scores_df.to_dict()\n",
+    "            # print(\"df\")\n",
+    "            # print(dict_data)\n",
+    "            if format_df:\n",
+    "                return scores_df\n",
+    "            else:\n",
+    "                return scores_dict\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"get specification error: {e}\")\n",
+    "            # WebDriver 종료\n",
+    "            driver.quit()\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def get_commetns(self, url:str=\"https://www.rtings.com/tv/reviews/sony/a95l-oled\", format_df=True, min_sentence_length = 15):\n",
+    "        \"\"\"\n",
+    "        return dict or DataFrame\n",
+    "\n",
+    "        \"\"\"\n",
+    "\n",
+    "        # Selenium을 사용하여 웹 드라이버 시작\n",
+    "        driver = self.web_driver.get_chrome()\n",
+    "        maker = url.split(\"/\")[-2]\n",
+    "        product = url.split(\"/\")[-1]\n",
+    "        url = url.lower()\n",
+    "        # url = url +\"#page-comments\"\n",
+    "        print(f\"connecting to {url}\")\n",
+    "        driver.get(url)\n",
+    "        time.sleep(self.wait_time)\n",
+    "        ## Load More 버튼 열기\n",
+    "        while True:\n",
+    "            try:\n",
+    "                button_div = driver.find_element(By.CLASS_NAME, \"comment_list-footer\")\n",
+    "                button = button_div.find_element(By.CLASS_NAME, \"e-button\")\n",
+    "                button.click()\n",
+    "                time.sleep(1)\n",
+    "            except:\n",
+    "                break\n",
+    "        try:\n",
+    "            page_source = driver.page_source\n",
+    "            soup = BeautifulSoup(page_source, 'html.parser')\n",
+    "            comment_contents = soup.find_all('div', class_='comment_list-item-content e-discussion_content is-newest')\n",
+    "            comments_list = []\n",
+    "            for idx, comment_content in enumerate(comment_contents):\n",
+    "                quote_controls = comment_content.find('div', class_='quote-controls')\n",
+    "                if quote_controls:\n",
+    "                    quote_controls.decompose()\n",
+    "                quote_content = comment_content.find('div', class_='quote-content')\n",
+    "                if quote_content:\n",
+    "                    quote_content.decompose()\n",
+    "                comment_text = comment_content.get_text(strip=True, separator='\\n')\n",
+    "                comment_text = re.sub(r'https?://\\S+', '', comment_text)\n",
+    "\n",
+    "                # min_sentence_length 길이 이상의 문장만 분석\n",
+    "                if len(comment_text.split()) >= min_sentence_length:\n",
+    "                    comments_list.append(\n",
+    "                        {'idx': idx, 'maker': maker, 'product': product, 'sentences': comment_text})\n",
+    "            comments_df = pd.DataFrame(comments_list).set_index(\"idx\")\n",
+    "            comments_dict = comments_df.to_dict()\n",
+    "        finally:\n",
+    "            driver.quit()\n",
+    "\n",
+    "        if format_df:\n",
+    "            return comments_df\n",
+    "        else:\n",
+    "            return comments_dict\n"
    ]
   },
   {
