--- a/quick_guide_textanalysis.ipynb
+++ b/quick_guide_textanalysis.ipynb
@@ -29,6 +29,7 @@
     "!pip install -U wordcloud nltk \n",
     "!pip install -U openai \n",
     "!pip install -U matplotlib seaborn\n",
+    "!pip install -U xlsxwriter\n",
     "!pip install -U getmodelspec"
    ]
   },
