--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -61,6 +61,8 @@
    "outputs": [],
    "source": [
     "from market_research import SONYSPEC, SONYSPEC_JP, PANASONICSPEC\n",
+    "from market_research import DataCleanup_s\n",
+    "from market_research import Plotting_s\n",
     "from market_research.tools import FileManager\n",
     "from market_research.tools import DataComparator\n",
     "from datetime import date\n",
