--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -161,13 +161,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b61b8ec3-92c1-4d60-a2c3-71a18448f8f8",
+   "id": "0d40ec7d-2d9a-4aad-9dcc-cfc94a7cc19d",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_models_prices = dc.get_price_df()\n",
-    "print(df_models_prices.columns)\n",
-    "plotting=Plotting(df_models_prices)\n",
+    "print(df_models_prices.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b61b8ec3-92c1-4d60-a2c3-71a18448f8f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plotting=Plotting_s(df_models_prices)\n",
     "col_group = [\"year\", \"display type\"]\n",
     "plotting.group_plot_bar(col_group =col_group , col_plot=\"price_discount\")\n",
     "col_group = [\"display type\", \"size\"]\n",
@@ -207,9 +216,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FileManager.df_to_excel(df_models_summary, file_name=file_name_s, sheet_name=\"summary_na\")\n",
-    "FileManager.df_to_excel(df_models_prices, file_name=file_name_s, sheet_name=\"prices_na\")\n",
-    "FileManager.df_to_excel(df_models, file_name=file_name_s, sheet_name=\"raw_na\")"
+    "FileManager.df_to_excel(df_models_summary, file_name=file_name_s, sheet_name=\"summary_na\", mode='w')\n",
+    "FileManager.df_to_excel(df_models_prices, file_name=file_name_s, sheet_name=\"prices_na\",  mode='a')\n",
+    "FileManager.df_to_excel(df_models, file_name=file_name_s, sheet_name=\"raw_na\", mode='a')"
    ]
   },
   {
@@ -220,7 +229,8 @@
    "outputs": [],
    "source": [
     "for idx in df_models_summary.index:\n",
-    "    DataComparator.is_equal_each_columns(df_models_summary.iloc[0,:], df_models_summary.iloc[idx,:])"
+    "    print(f\"{df_models_summary.index[0]} vs {idx}\")\n",
+    "    DataComparator.is_equal_each_columns(df_models_summary.iloc[0,:], df_models_summary.loc[idx,:])"
    ]
   },
   {
