--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -30,7 +30,6 @@
     "!pip install -U wordcloud nltk \n",
     "!pip install -U openai \n",
     "!pip install -U matplotlib seaborn\n",
-    "!pip install -U xlsxwriter\n",
     "!pip install -U getmodelspec"
    ]
   },
@@ -188,7 +187,7 @@
    "id": "5a036033-2957-44f7-a490-b9e40dd752c7",
    "metadata": {},
    "source": [
-    "##### sector prices group"
+    "##### sector spec heatmap"
    ]
   },
   {
@@ -198,7 +197,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_models_summary = dc.get_df_cleaned()"
+    "df_models_summary = dc.get_df_cleaned()\n",
+    "print(df_models_summary.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ca72bf7-ee61-482a-bc05-a57c4d4b7768",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plotting=Plotting_s(df_models_prices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b51640a6-e56f-45a5-84f3-0a46c3e9d35a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plotting.heatmap(df=df_models_summary)"
    ]
   },
   {
@@ -269,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FileManager.dict_to_excel(dict_models, file_name=file_name_sjp, sheet_name=\"raw_na\")"
+    "FileManager.dict_to_excel(dict_models, file_name=file_name_sjp, sheet_name=\"raw_na\", mode='w')"
    ]
   },
   {
@@ -308,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FileManager.df_to_excel(df_models, file_name=file_name_p, sheet_name=\"raw_uk\")"
+    "FileManager.df_to_excel(df_models, file_name=file_name_p, sheet_name=\"raw_uk\", mode='w')"
    ]
   },
   {
