--- a/quick_guide_market_rtings.ipynb
+++ b/quick_guide_market_rtings.ipynb
@@ -30,7 +30,6 @@
     "!pip install -U wordcloud nltk \n",
     "!pip install -U openai \n",
     "!pip install -U matplotlib seaborn\n",
-    "!pip install -U xlsxwriter\n",
     "!pip install -U getmodelspec"
    ]
   },
@@ -73,7 +72,7 @@
    "id": "6a2b21aa-7bf2-4e1e-9540-4db922069088",
    "metadata": {},
    "source": [
-    "### 분석 폴더\n",
+    "### 분석 폴더 생성\n",
     "- `input_data`: 검색할 데이터 폴더\n",
     "- `results`: 검색된 데이터 폴더"
    ]
@@ -86,18 +85,12 @@
    "outputs": [],
    "source": [
     "intput_folder = Path(\"input_urls\")  # 폴더 이름을 지정\n",
-    "\n",
-    "# 폴더가 존재하지 않으면 폴더 생성\n",
     "if not intput_folder.exists():\n",
     "    intput_folder.mkdir(parents=True)\n",
     "\n",
-    "output_comments_folder = Path('results/comments')  \n",
-    "if not output_comments_folder.exists():\n",
-    "  output_comments_folder.mkdir(parents=True, exist_ok=True)\n",
-    "    \n",
-    "output_scores_folder = Path('results/scores')  \n",
-    "if not output_scores_folder.exists():\n",
-    "  output_scores_folder.mkdir(parents=True, exist_ok=True)"
+    "output_folder = Path('results')  \n",
+    "if not output_folder.exists():\n",
+    "  output_folder.mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
@@ -125,7 +118,19 @@
    "id": "997d0838-45c0-4956-a753-e16ec31ea176",
    "metadata": {},
    "source": [
-    "- 엑셀 파일의 column 명은 `urls`으로 하여 `input_urls`폴더에 넣어주세요"
+    "- 엑셀 파일의 column 명은 `urls.xlsx`으로 하여 `input_urls`폴더에 넣어주세요"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12cd06a3-c728-4ade-8295-e1d49981dab6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urls=[\n",
+    "    \n",
+    "]"
    ]
   },
   {
@@ -136,12 +141,13 @@
    "outputs": [],
    "source": [
     "# 분석할 엑셀 파일이 있는 폴더 경로\n",
-    "file_list = intput_folder.glob('*')\n",
-    "excel_files = [file for file in file_list if file.suffix in {'.xlsx', '.xls'}]\n",
-    "urls=[]\n",
-    "for excel_file in excel_files:\n",
-    "    df = pd.read_excel(excel_file)\n",
-    "    urls.extend(df[\"urls\"])"
+    "if not urls:\n",
+    "    file_list = intput_folder.glob('*')\n",
+    "    excel_files = [file for file in file_list if file.suffix in {'.xlsx', '.xls'}]\n",
+    "    \n",
+    "    for excel_file in excel_files:\n",
+    "        df = pd.read_excel(excel_file)\n",
+    "        urls.extend(df[\"urls\"])"
    ]
   },
   {
@@ -165,18 +171,18 @@
     "    \n",
     "    # 저장할 데이터 경로\n",
     "    file_name = f\"{maker}_{model}_rtings{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
-    "    output_file_name = output_comments_folder/file_name\n",
+    "    output_file_name = output_folder/file_name\n",
     "    rtings = Rtings(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
-    "    \n",
-    "    comments_df = rtings.get_commetns(url, format_df=True)\n",
-    "    FileManager.df_to_excel(comments_df, file_name=output_file_name, sheet_name=\"comments\")\n",
     "\n",
     "    score_df= rtings.get_score(url,format_df=True)\n",
-    "    FileManager.df_to_excel(score_df, file_name=output_file_name, sheet_name=\"scores\")\n",
+    "    FileManager.df_to_excel(score_df, file_name=output_file_name, sheet_name=\"scores\" mode='w')\n",
     "\n",
     "    # 저장할 데이터 경로\n",
     "    measurement_df= rtings.get_measurement_reuslts(url)\n",
-    "    FileManager.df_to_excel(measurement_df, file_name=output_file_name, sheet_name=\"measurement\")"
+    "    FileManager.df_to_excel(measurement_df, file_name=output_file_name, sheet_name=\"measurement\" mode='a')\n",
+    "\n",
+    "    comments_df = rtings.get_commetns(url, format_df=True)\n",
+    "    FileManager.df_to_excel(comments_df, file_name=output_file_name, sheet_name=\"comments\" mode='a')"
    ]
   },
   {
