--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -28,7 +28,7 @@
     "!pip install -U pandas openpyxl tqdm\n",
     "!pip install -U requests selenium beautifulsoup4 \n",
     "!pip install -U wordcloud nltk \n",
-    "!pip install -U openai \n",
+    "!pip install -U scikit-learn openai \n",
     "!pip install -U matplotlib seaborn\n",
     "!pip install -U getmodelspec"
    ]
@@ -248,9 +248,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for idx in df_models_summary.index:\n",
+    "for i, idx in enumerate(df_models_summary.index):\n",
     "    print(f\"{df_models_summary.index[0]} vs {idx}\")\n",
-    "    DataComparator.is_equal_each_columns(df_models_summary.iloc[0,:], df_models_summary.loc[idx,:])"
+    "    DataComparator.is_equal_each_columns(df_models_summary.iloc[0,:], df_models_summary.iloc[i,:])"
    ]
   },
   {
