--- a/quick_guide_market_rtings.ipynb
+++ b/quick_guide_market_rtings.ipynb
@@ -28,7 +28,7 @@
     "!pip install -U pandas openpyxl tqdm\n",
     "!pip install -U requests selenium beautifulsoup4 \n",
     "!pip install -U wordcloud nltk \n",
-    "!pip install -U openai \n",
+    "!pip install -U scikit-learn openai \n",
     "!pip install -U matplotlib seaborn\n",
     "!pip install -U getmodelspec"
    ]
@@ -61,9 +61,12 @@
    "source": [
     "from datetime import date\n",
     "from pathlib import Path\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "from google.colab import files\n",
-    "# from market_research import Rtings\n",
+    "from market_research import Rtings\n",
     "from market_research.tools import FileManager"
    ]
   },
@@ -128,8 +131,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "urls=[\n",
-    "    \n",
+    "urls=[\"https://www.rtings.com/tv/reviews/sony/a95l-oled\",\n",
+    "      \"https://www.rtings.com/tv/reviews/sony/a80l-a80cl-oled\",\n",
+    "      \"https://www.rtings.com/tv/reviews/lg/g3-oled\",\n",
+    "      \"https://www.rtings.com/tv/reviews/lg/c3-oled\"\n",
     "]"
    ]
   },
@@ -147,7 +152,8 @@
     "    \n",
     "    for excel_file in excel_files:\n",
     "        df = pd.read_excel(excel_file)\n",
-    "        urls.extend(df[\"urls\"])"
+    "        urls.extend(df[\"urls\"])\n",
+    "print(urls)"
    ]
   },
   {
@@ -155,7 +161,7 @@
    "id": "0429c013",
    "metadata": {},
    "source": [
-    "## 실행"
+    "## gathering data"
    ]
   },
   {
@@ -165,6 +171,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "score_df = pd.DataFrame()\n",
+    "measurement_df = pd.DataFrame()\n",
+    "comments_df = pd.DataFrame()\n",
     "for url in urls:\n",
     "    maker = url.split(\"/\")[-2]\n",
     "    model = url.split(\"/\")[-1]\n",
@@ -174,15 +183,62 @@
     "    output_file_name = output_folder/file_name\n",
     "    rtings = Rtings(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
     "\n",
-    "    score_df= rtings.get_score(url,format_df=True)\n",
-    "    FileManager.df_to_excel(score_df, file_name=output_file_name, sheet_name=\"scores\" mode='w')\n",
+    "    df= rtings.get_score(url,format_df=True)\n",
+    "    score_df = pd.concat([score_df,df], axis=1)\n",
+    "    FileManager.df_to_excel(score_df, file_name=output_file_name, sheet_name=\"scores\", mode='w')\n",
     "\n",
     "    # 저장할 데이터 경로\n",
-    "    measurement_df= rtings.get_measurement_reuslts(url)\n",
-    "    FileManager.df_to_excel(measurement_df, file_name=output_file_name, sheet_name=\"measurement\" mode='a')\n",
+    "    df= rtings.get_measurement_reuslts(url)\n",
+    "    measurement_df = pd.concat([measurement_df,df], axis=1)\n",
+    "    FileManager.df_to_excel(measurement_df, file_name=output_file_name, sheet_name=\"measurement\", mode='a')\n",
     "\n",
     "    comments_df = rtings.get_commetns(url, format_df=True)\n",
-    "    FileManager.df_to_excel(comments_df, file_name=output_file_name, sheet_name=\"comments\" mode='a')"
+    "    comments_df = pd.concat([comments_df,df], axis=1)\n",
+    "    FileManager.df_to_excel(comments_df, file_name=output_file_name, sheet_name=\"comments\", mode='a')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db79af4f-74e5-418d-b160-1c74d576a5ba",
+   "metadata": {},
+   "source": [
+    "## plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2a01dd7-a532-4c45-8bd2-3b738cd47b0b",
+   "metadata": {},
+   "source": [
+    "## heatmap, scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56be79bb-aedb-49b9-861b-99548a9582e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "col_socres = [\"maker\",\"product\",\"header\", \"score\"]\n",
+    "data_df = df_bup[col_socres].drop_duplicates().replace(\"\",np.nan).dropna()\n",
+    "data_df[\"score\"] = data_df[\"score\"].map(lambda x:float(x))\n",
+    "data_df[\"product\"] = data_df[\"product\"].map(lambda x: x.replace(\"-oled\",\"\"))\n",
+    "data_df = data_df.pivot(index=[\"maker\",\"product\"], columns=\"header\", values='score')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc9f34e4-e7a1-44d7-93bc-d9e5739818a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8,10))\n",
+    "sns.heatmap(data_df.T, annot=True, cmap=\"cividis\", cbar=True)\n",
+    "plt.title(\"heatmap for Rtings\")\n",
+    "plt.show()"
    ]
   },
   {
