--- a/quick_guide_textanalysis.ipynb
+++ b/quick_guide_textanalysis.ipynb
@@ -27,9 +27,8 @@
     "!pip install -U pandas openpyxl tqdm\n",
     "!pip install -U requests selenium beautifulsoup4 \n",
     "!pip install -U wordcloud nltk \n",
-    "!pip install -U openai \n",
+    "!pip install -U scikit-learn openai \n",
     "!pip install -U matplotlib seaborn\n",
-    "!pip install -U xlsxwriter\n",
     "!pip install -U getmodelspec"
    ]
   },
