--- a/quick_guide_market_rtings.ipynb
+++ b/quick_guide_market_rtings.ipynb
@@ -243,6 +243,84 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cbc59881-d4f7-4f8a-bf80-2128f7824f0e",
+   "metadata": {},
+   "source": [
+    "## Line Plot, HDR Brightness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "270f459f-e4d5-497c-9da9-aa487b320cd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hdr_df = df_bup[df_bup[\"header\"] == 'HDR Brightness']\n",
+    "hdr_df[\"result_value\"] = hdr_df[\"result_value\"].map(lambda x: x.replace(\"cd/m²\",\"\")).map(lambda x: x.replace(\",\",\"\")).map(lambda x:x.strip()).map(lambda x:float(x))\n",
+    "hdr_df_peak = hdr_df[hdr_df.label.map(lambda x:True if \"Peak\" in x else False)]\n",
+    "hdr_df_peak[\"label\"] = hdr_df_peak[\"label\"].map(lambda x: int(x.split(\"%\")[0].split(\" \")[-1]))\n",
+    "hdr_df_peak = hdr_df_peak.sort_values([\"maker\",\"product\",\"label\"], ascending=False)\n",
+    "# hdr_df_peak[\"label\"]=hdr_df_peak.label.map(lambda x: str(x)+\"%\")\n",
+    "data_df = hdr_df_peak.pivot(index=[\"maker\",\"product\"], columns=\"label\", values='result_value')\n",
+    "data_df.columns = data_df.columns.map(lambda x: str(x)+\"%\")\n",
+    "\n",
+    "data_df = data_df.reset_index()\n",
+    "data_df = pd.merge(pd.Series([f\"{maker}_{product}\"for maker, product in zip(data_df[\"maker\"], data_df[\"product\"])],name=\"label\"),\n",
+    "                   data_df, left_index=True, right_index=True).drop(['maker','product'], axis=1).set_index(\"label\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fecb5f06-3e4d-4899-8cd2-542402eb39dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "sns.lineplot(data=data_df.T, dashes=False, markers=True, palette='YlGnBu')\n",
+    "sns.despine()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c66d2713-d242-4cc7-9a36-7a1f4293c23b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "fig = px.line(data_df.T, x=data_df.T.index, y=data_df.T.columns, title='HDR Brightness',\n",
+    "              labels={'index': 'APL', 'value': 'Brightness'}, line_shape='linear')\n",
+    "fig.update_layout(width=1000, height=500, template='plotly_white', margin=dict(l=10, r=10, b=10, t=40))\n",
+    "fig.show()\n",
+    "\n",
+    "# template='plotly_dark','ggplot2', 'seaborn', 'simple_white', 'plotly', 'plotly_white'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a49de963-3e28-46d1-a149-cc973f3d079e",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19904917-21f9-461d-8c0d-42b907d773ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set(df_bup.header)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1cd68dd3",
    "metadata": {},
    "source": [
