--- a/quick_guide_market_rtings.ipynb
+++ b/quick_guide_market_rtings.ipynb
@@ -137,8 +137,7 @@
     "      \"https://www.rtings.com/tv/reviews/lg/c3-oled\",\n",
     "      \"https://www.rtings.com/tv/reviews/sony/x95l\",\n",
     "      \"https://www.rtings.com/tv/reviews/sony/x93l-x93cl\",\n",
-    "      \"https://www.rtings.com/tv/reviews/sony/x90l-x90cl\n",
-    "]"
+    "      \"https://www.rtings.com/tv/reviews/sony/x90l-x90cl\"]"
    ]
   },
   {
@@ -209,6 +208,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d69b5e2-b738-46a0-8f33-e8964bb07866",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_bup = measurement_df.copy()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b2a01dd7-a532-4c45-8bd2-3b738cd47b0b",
    "metadata": {},
@@ -223,7 +232,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "col_socres = [\"maker\",\"product\",\"header\", \"score\"]\n",
     "data_df = df_bup[col_socres].drop_duplicates().replace(\"\",np.nan).dropna()\n",
     "data_df[\"score\"] = data_df[\"score\"].map(lambda x:float(x))\n",
